# openmm-spherical-boundaries

./: README.md  pyproject.toml
openmm_spherical_boundaries/: __init__.py  droplet.py  setup_simulations.py
openmm_spherical_boundaries/analysis/: __init__.py  discovery.py  metrics.py
src/openmm_spherical_boundaries/: __init__.py  cli.py  droplet.py  geometry.py  prepare_md_system.py  prepare_ref_sim.py  simulation.py  triangular_model.py  utils.py
